crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_360x800.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 159.45751085606108Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 400.0056265875201 mm",
    "w_kg: 0.4 kg",
    "v_cm3: 200 cm³",
    "room_size_m3: 60 m³",
    "hr: 60 bpm",
    "buoyant force: 1961.33 N",
    "body density: 2 g/cm³",
    [
      [
        "F 1",
        212.6782583679142
      ],
      [
        "F 2",
        638.0347751037426
      ],
      [
        "F 3",
        1063.3912918395708
      ],
      [
        "F 4",
        1488.7478085753994
      ],
      [
        "F 5",
        1914.1043253112277
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 191.63910007012075Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 292.05440466016046 mm",
    "w_kg: 0.24273804704927837 kg",
    "v_cm3: 77.84361146783452 cm³",
    "room_size_m3: 51.872554995491356 m³",
    "hr: 70 bpm",
    "buoyant force: 763.3850524010394 N",
    "body density: 3.1182783335994024 g/cm³",
    [
      [
        "F 1",
        291.2899057249002
      ],
      [
        "F 2",
        873.8697171747008
      ],
      [
        "F 3",
        1456.449528624501
      ],
      [
        "F 4",
        2039.0293400743017
      ],
      [
        "F 5",
        2621.609151524102
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 240.09485443625908Hz",
    "cents: 1200 cents",
    "l_mm: 148.3587555157735 mm",
    "w_kg: 0.13156731141471564 kg",
    "v_cm3: 10.204018558783213 cm³",
    "room_size_m3: 37.91556824029271 m³",
    "hr: 95 bpm",
    "buoyant force: 100.06723859949139 N",
    "body density: 12.893676217539584 g/cm³",
    [
      [
        "F 1",
        573.424195317917
      ],
      [
        "F 2",
        1720.272585953751
      ],
      [
        "F 3",
        2867.1209765895846
      ],
      [
        "F 4",
        4013.969367225419
      ],
      [
        "F 5",
        5160.817757861253
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 318.9751812711115Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 53.92485962335482 mm",
    "w_kg: 0.060805377217012804 kg",
    "v_cm3: 0.4900030288259473 cm³",
    "room_size_m3: 23.73695138356314 m³",
    "hr: 152 bpm",
    "buoyant force: 4.805288202635976 N",
    "body density: 124.0918395192437 g/cm³",
    [
      [
        "F 1",
        1577.6118954077938
      ],
      [
        "F 2",
        4732.835686223381
      ],
      [
        "F 3",
        7888.059477038969
      ],
      [
        "F 4",
        11043.283267854556
      ],
      [
        "F 5",
        14198.507058670144
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 383.35050105403Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 30.453450362456653 mm",
    "w_kg: 0.03689944628938094 kg",
    "v_cm3: 0.08825538426856532 cm³",
    "room_size_m3: 18.22177869719749 m³",
    "hr: 198 bpm",
    "buoyant force: 0.865489664137326 N",
    "body density: 418.09852843758716 g/cm³",
    [
      [
        "F 1",
        2793.5258234278213
      ],
      [
        "F 2",
        8380.577470283464
      ],
      [
        "F 3",
        13967.629117139106
      ],
      [
        "F 4",
        19554.680763994747
      ],
      [
        "F 5",
        25141.73241085039
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 480.2802909998884Hz",
    "cents: 1200 cents",
    "l_mm: 20.00028132937601 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 0.025 cm³",
    "room_size_m3: 15 m³",
    "hr: 240 bpm",
    "buoyant force: 0.24516625 N",
    "body density: 800 g/cm³",
    [
      [
        "F 1",
        4253.565167358283
      ],
      [
        "F 2",
        12760.69550207485
      ],
      [
        "F 3",
        21267.825836791417
      ],
      [
        "F 4",
        29774.956171507984
      ],
      [
        "F 5",
        38282.08650622455
      ]
    ]
  ]
]
