crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_390x844.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 120.08102004345253Hz",
    "cents: 0 cents",
    "l_mm: 400.0056265875201 mm",
    "w_kg: 0.4 kg",
    "v_cm3: 200 cm³",
    "room_size_m3: 60 m³",
    "hr: 60 bpm",
    "buoyant force: 1961.33 N",
    "body density: 2 g/cm³",
    [
      [
        "F 1",
        212.6782583679142
      ],
      [
        "F 2",
        638.0347751037426
      ],
      [
        "F 3",
        1063.3912918395708
      ],
      [
        "F 4",
        1488.7478085753994
      ],
      [
        "F 5",
        1914.1043253112277
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 151.292604845594Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 266.14972444326844 mm",
    "w_kg: 0.21971210866122376 kg",
    "v_cm3: 58.91281263109585 cm³",
    "room_size_m3: 49.69023968007276 m³",
    "hr: 73 bpm",
    "buoyant force: 577.7373339887362 N",
    "body density: 3.729445240325421 g/cm³",
    [
      [
        "F 1",
        319.64151072466643
      ],
      [
        "F 2",
        958.9245321739993
      ],
      [
        "F 3",
        1598.207553623332
      ],
      [
        "F 4",
        2237.490575072665
      ],
      [
        "F 5",
        2876.7735965219977
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 190.61673753839096Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 132.82721347706595 mm",
    "w_kg: 0.12068352673090321 kg",
    "v_cm3: 7.323064856184027 cm³",
    "room_size_m3: 36.024102824556245 m³",
    "hr: 100 bpm",
    "buoyant force: 71.81473397189708 N",
    "body density: 16.47992051155889 g/cm³",
    [
      [
        "F 1",
        640.474928089105
      ],
      [
        "F 2",
        1921.424784267315
      ],
      [
        "F 3",
        3202.3746404455246
      ],
      [
        "F 4",
        4483.324496623735
      ],
      [
        "F 5",
        5764.274352801945
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 240.16204008690505Hz",
    "cents: 0 cents",
    "l_mm: 60.23031618038914 mm",
    "w_kg: 0.06628908034679976 kg",
    "v_cm3: 0.6827742343122504 cm³",
    "room_size_m3: 24.983273126416474 m³",
    "hr: 145 bpm",
    "buoyant force: 6.69572794491823 N",
    "body density: 97.08784692728173 g/cm³",
    [
      [
        "F 1",
        1412.4531530800668
      ],
      [
        "F 2",
        4237.3594592402005
      ],
      [
        "F 3",
        7062.265765400333
      ],
      [
        "F 4",
        9887.172071560468
      ],
      [
        "F 5",
        12712.078377720602
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 302.585209691188Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 30.059114589799428 mm",
    "w_kg: 0.03641128406052166 kg",
    "v_cm3: 0.08487118127103123 cm³",
    "room_size_m3: 18.112208872297455 m³",
    "hr: 199 bpm",
    "buoyant force: 0.8323019698115584 N",
    "body density: 429.0182311030209 g/cm³",
    [
      [
        "F 1",
        2830.1731824419535
      ],
      [
        "F 2",
        8490.519547325861
      ],
      [
        "F 3",
        14150.865912209767
      ],
      [
        "F 4",
        19811.212277093673
      ],
      [
        "F 5",
        25471.55864197758
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 381.23347507678193Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 20.00028132937601 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 0.025 cm³",
    "room_size_m3: 15 m³",
    "hr: 240 bpm",
    "buoyant force: 0.24516625 N",
    "body density: 800 g/cm³",
    [
      [
        "F 1",
        4253.565167358283
      ],
      [
        "F 2",
        12760.69550207485
      ],
      [
        "F 3",
        21267.825836791417
      ],
      [
        "F 4",
        29774.956171507984
      ],
      [
        "F 5",
        38282.08650622455
      ]
    ]
  ]
]
