crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_393x873.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 159.4076959510764Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 400.0056265875201 mm",
    "w_kg: 0.4 kg",
    "v_cm3: 200 cm³",
    "room_size_m3: 60 m³",
    "hr: 60 bpm",
    "buoyant force: 1961.33 N",
    "body density: 2 g/cm³",
    [
      [
        "F 1",
        212.6782583679142
      ],
      [
        "F 2",
        638.0347751037426
      ],
      [
        "F 3",
        1063.3912918395708
      ],
      [
        "F 4",
        1488.7478085753994
      ],
      [
        "F 5",
        1914.1043253112277
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 191.57923156025817Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 292.0322142764387 mm",
    "w_kg: 0.24271730331764085 kg",
    "v_cm3: 77.82586907116786 cm³",
    "room_size_m3: 51.87073109972918 m³",
    "hr: 70 bpm",
    "buoyant force: 763.2110589267683 N",
    "body density: 3.118722684557342 g/cm³",
    [
      [
        "F 1",
        291.3120397035037
      ],
      [
        "F 2",
        873.9361191105111
      ],
      [
        "F 3",
        1456.5601985175183
      ],
      [
        "F 4",
        2039.1842779245258
      ],
      [
        "F 5",
        2621.808357331533
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 240.01984823368608Hz",
    "cents: 1200 cents",
    "l_mm: 148.3229982944636 mm",
    "w_kg: 0.13154228270906962 kg",
    "v_cm3: 10.196642261728854 cm³",
    "room_size_m3: 37.91133913275531 m³",
    "hr: 95 bpm",
    "buoyant force: 99.99490183598327 N",
    "body density: 12.900548958433934 g/cm³",
    [
      [
        "F 1",
        573.562434539698
      ],
      [
        "F 2",
        1720.687303619094
      ],
      [
        "F 3",
        2867.81217269849
      ],
      [
        "F 4",
        4014.9370417778864
      ],
      [
        "F 5",
        5162.061910857282
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 318.8153919021528Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 53.93785965141425 mm",
    "w_kg: 0.060816946728022805 kg",
    "v_cm3: 0.4903574992295795 cm³",
    "room_size_m3: 23.739599301634858 m³",
    "hr: 152 bpm",
    "buoyant force: 4.808764369819755 N",
    "body density: 124.02572984725383 g/cm³",
    [
      [
        "F 1",
        1577.2316615787222
      ],
      [
        "F 2",
        4731.694984736167
      ],
      [
        "F 3",
        7886.15830789361
      ],
      [
        "F 4",
        11040.621631051055
      ],
      [
        "F 5",
        14195.084954208498
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 383.15846312051633Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 30.456590635120847 mm",
    "w_kg: 0.03690331326459578 kg",
    "v_cm3: 0.08828268901205441 cm³",
    "room_size_m3: 18.22264818211051 m³",
    "hr: 198 bpm",
    "buoyant force: 0.8657574322000633 N",
    "body density: 418.01301792650287 g/cm³",
    [
      [
        "F 1",
        2793.237792738992
      ],
      [
        "F 2",
        8379.713378216977
      ],
      [
        "F 3",
        13966.188963694958
      ],
      [
        "F 4",
        19552.664549172943
      ],
      [
        "F 5",
        25139.140134650926
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 480.03969646737215Hz",
    "cents: 1200 cents",
    "l_mm: 20.00028132937601 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 0.025 cm³",
    "room_size_m3: 15 m³",
    "hr: 240 bpm",
    "buoyant force: 0.24516625 N",
    "body density: 800 g/cm³",
    [
      [
        "F 1",
        4253.565167358283
      ],
      [
        "F 2",
        12760.69550207485
      ],
      [
        "F 3",
        21267.825836791417
      ],
      [
        "F 4",
        29774.956171507984
      ],
      [
        "F 5",
        38282.08650622455
      ]
    ]
  ]
]
