crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_412x915.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 120.00992411684302Hz",
    "cents: 0 cents",
    "l_mm: 400.0056265875201 mm",
    "w_kg: 0.4 kg",
    "v_cm3: 200 cm³",
    "room_size_m3: 60 m³",
    "hr: 60 bpm",
    "buoyant force: 1961.33 N",
    "body density: 2 g/cm³",
    [
      [
        "F 1",
        212.6782583679142
      ],
      [
        "F 2",
        638.0347751037426
      ],
      [
        "F 3",
        1063.3912918395708
      ],
      [
        "F 4",
        1488.7478085753994
      ],
      [
        "F 5",
        1914.1043253112277
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 151.20302959109694Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 266.1497244432678 mm",
    "w_kg: 0.21971210866122326 kg",
    "v_cm3: 58.912812631095456 cm³",
    "room_size_m3: 49.69023968007271 m³",
    "hr: 73 bpm",
    "buoyant force: 577.7373339887322 N",
    "body density: 3.7294452403254374 g/cm³",
    [
      [
        "F 1",
        319.6415107246672
      ],
      [
        "F 2",
        958.9245321740017
      ],
      [
        "F 3",
        1598.207553623336
      ],
      [
        "F 4",
        2237.4905750726707
      ],
      [
        "F 5",
        2876.773596522005
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 190.5038797897004Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 132.82721347706598 mm",
    "w_kg: 0.12068352673090321 kg",
    "v_cm3: 7.323064856184027 cm³",
    "room_size_m3: 36.024102824556245 m³",
    "hr: 100 bpm",
    "buoyant force: 71.81473397189708 N",
    "body density: 16.47992051155889 g/cm³",
    [
      [
        "F 1",
        640.4749280891049
      ],
      [
        "F 2",
        1921.4247842673146
      ],
      [
        "F 3",
        3202.374640445524
      ],
      [
        "F 4",
        4483.324496623734
      ],
      [
        "F 5",
        5764.274352801944
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 240.01984823368605Hz",
    "cents: 0 cents",
    "l_mm: 60.23031618038914 mm",
    "w_kg: 0.06628908034679976 kg",
    "v_cm3: 0.6827742343122504 cm³",
    "room_size_m3: 24.983273126416474 m³",
    "hr: 145 bpm",
    "buoyant force: 6.69572794491823 N",
    "body density: 97.08784692728173 g/cm³",
    [
      [
        "F 1",
        1412.4531530800668
      ],
      [
        "F 2",
        4237.3594592402005
      ],
      [
        "F 3",
        7062.265765400333
      ],
      [
        "F 4",
        9887.172071560468
      ],
      [
        "F 5",
        12712.078377720602
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 302.40605918219387Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 30.059114589799357 mm",
    "w_kg: 0.036411284060521576 kg",
    "v_cm3: 0.08487118127103063 cm³",
    "room_size_m3: 18.112208872297437 m³",
    "hr: 199 bpm",
    "buoyant force: 0.8323019698115525 N",
    "body density: 429.01823110302297 g/cm³",
    [
      [
        "F 1",
        2830.1731824419603
      ],
      [
        "F 2",
        8490.519547325881
      ],
      [
        "F 3",
        14150.865912209802
      ],
      [
        "F 4",
        19811.212277093724
      ],
      [
        "F 5",
        25471.55864197764
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 381.0077595794008Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 20.00028132937601 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 0.025 cm³",
    "room_size_m3: 15 m³",
    "hr: 240 bpm",
    "buoyant force: 0.24516625 N",
    "body density: 800 g/cm³",
    [
      [
        "F 1",
        4253.565167358283
      ],
      [
        "F 2",
        12760.69550207485
      ],
      [
        "F 3",
        21267.825836791417
      ],
      [
        "F 4",
        29774.956171507984
      ],
      [
        "F 5",
        38282.08650622455
      ]
    ]
  ]
]
