crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_414x896.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 159.45217354481272Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 400.0056265875201 mm",
    "w_kg: 0.4 kg",
    "v_cm3: 200 cm³",
    "room_size_m3: 60 m³",
    "hr: 60 bpm",
    "buoyant force: 1961.33 N",
    "body density: 2 g/cm³",
    [
      [
        "F 1",
        212.6782583679142
      ],
      [
        "F 2",
        638.0347751037426
      ],
      [
        "F 3",
        1063.3912918395708
      ],
      [
        "F 4",
        1488.7478085753994
      ],
      [
        "F 5",
        1914.1043253112277
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 191.63268558692118Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 292.0676135810216 mm",
    "w_kg: 0.2427503957802542 kg",
    "v_cm3: 77.8541739855583 cm³",
    "room_size_m3: 51.87364064189945 m³",
    "hr: 70 bpm",
    "buoyant force: 763.4886353154753 N",
    "body density: 3.1180138887002204 g/cm³",
    [
      [
        "F 1",
        291.27673197631105
      ],
      [
        "F 2",
        873.8301959289332
      ],
      [
        "F 3",
        1456.383659881555
      ],
      [
        "F 4",
        2038.9371238341773
      ],
      [
        "F 5",
        2621.4905877867996
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 240.086818057412Hz",
    "cents: 1200 cents",
    "l_mm: 148.38004353269898 mm",
    "w_kg: 0.13158221223356964 kg",
    "v_cm3: 10.208411716907083 cm³",
    "room_size_m3: 37.91808577411608 m³",
    "hr: 95 bpm",
    "buoyant force: 100.11032076360684 N",
    "body density: 12.889587125061219 g/cm³",
    [
      [
        "F 1",
        573.3419264110966
      ],
      [
        "F 2",
        1720.0257792332898
      ],
      [
        "F 3",
        2866.709632055483
      ],
      [
        "F 4",
        4013.393484877676
      ],
      [
        "F 5",
        5160.077337699869
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 319.0003291094331Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 53.91712304842879 mm",
    "w_kg: 0.06079849140854493 kg",
    "v_cm3: 0.48979215755170696 cm³",
    "room_size_m3: 23.73537539213981 m³",
    "hr: 152 bpm",
    "buoyant force: 4.803220261854447 N",
    "body density: 124.13120641305181 g/cm³",
    [
      [
        "F 1",
        1577.8382671417241
      ],
      [
        "F 2",
        4733.514801425173
      ],
      [
        "F 3",
        7889.1913357086205
      ],
      [
        "F 4",
        11044.86786999207
      ],
      [
        "F 5",
        14200.544404275517
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 383.3807242092692Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 30.451581366496917 mm",
    "w_kg: 0.036897144630666574 kg",
    "v_cm3: 0.0882391359783142 cm³",
    "room_size_m3: 18.221261183029817 m³",
    "hr: 198 bpm",
    "buoyant force: 0.865330322841735 N",
    "body density: 418.14943246650193 g/cm³",
    [
      [
        "F 1",
        2793.6972788414027
      ],
      [
        "F 2",
        8381.091836524209
      ],
      [
        "F 3",
        13968.486394207013
      ],
      [
        "F 4",
        19555.88095188982
      ],
      [
        "F 5",
        25143.275509572624
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 480.31815604963606Hz",
    "cents: 1200 cents",
    "l_mm: 20.00028132937601 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 0.025 cm³",
    "room_size_m3: 15 m³",
    "hr: 240 bpm",
    "buoyant force: 0.24516625 N",
    "body density: 800 g/cm³",
    [
      [
        "F 1",
        4253.565167358283
      ],
      [
        "F 2",
        12760.69550207485
      ],
      [
        "F 3",
        21267.825836791417
      ],
      [
        "F 4",
        29774.956171507984
      ],
      [
        "F 5",
        38282.08650622455
      ]
    ]
  ]
]
