crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_768x1024.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 120.0685227126032Hz",
    "cents: 0 cents",
    "l_mm: 170.79999999999995 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 40 cm³",
    "volume: 0.00004 m³",
    "hr: 641 bpm",
    "buoyant force: 392.26599999999996 N",
    "body density: 0.5 g/cm³",
    [
      [
        "F 1",
        498.0825526932086
      ],
      [
        "F 2",
        1494.2476580796258
      ],
      [
        "F 3",
        2490.412763466043
      ],
      [
        "F 4",
        3486.57786885246
      ],
      [
        "F 5",
        4482.742974238878
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 151.27685919538945Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 208.87343218109527 mm",
    "w_kg: 0.4742881219558612 kg",
    "v_cm3: 710.9577059292228 cm³",
    "volume: 0.0007109577059292229 m³",
    "hr: 291 bpm",
    "buoyant force: 6972.113386850812 N",
    "body density: 0.6671115848388842 g/cm³",
    [
      [
        "F 1",
        407.29210561466397
      ],
      [
        "F 2",
        1221.8763168439918
      ],
      [
        "F 3",
        2036.4605280733197
      ],
      [
        "F 4",
        2851.044739302648
      ],
      [
        "F 5",
        3665.6289505319755
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 190.59689926225394Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 246.94686436219058 mm",
    "w_kg: 11.247461131420891 kg",
    "v_cm3: 8476.84540364587 cm³",
    "volume: 0.00847684540364587 m³",
    "hr: 132 bpm",
    "buoyant force: 83129.45597766376 N",
    "body density: 1.32684514059716 g/cm³",
    [
      [
        "F 1",
        344.49718654951766
      ],
      [
        "F 2",
        1033.491559648553
      ],
      [
        "F 3",
        1722.4859327475883
      ],
      [
        "F 4",
        2411.4803058466237
      ],
      [
        "F 5",
        3100.474678945659
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 240.1370454252064Hz",
    "cents: 0 cents",
    "l_mm: 304.2202965432859 mm",
    "w_kg: 266.7268608396613 kg",
    "v_cm3: 88476.30979295989 cm³",
    "volume: 0.08847630979295988 m³",
    "hr: 60 bpm",
    "buoyant force: 867656.20343113 N",
    "body density: 3.014669819116766 g/cm³",
    [
      [
        "F 1",
        279.64110536555046
      ],
      [
        "F 2",
        838.9233160966514
      ],
      [
        "F 3",
        1398.2055268277522
      ],
      [
        "F 4",
        1957.4877375588533
      ],
      [
        "F 5",
        2516.769948289954
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 302.5537183907789Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 342.2937287243812 mm",
    "w_kg: 6325.269095141265 kg",
    "v_cm3: 1054915.0726480263 cm³",
    "volume: 1.0549150726480263 m³",
    "hr: 28 bpm",
    "buoyant force: 10345182.897183767 N",
    "body density: 5.995998407022192 g/cm³",
    [
      [
        "F 1",
        248.5365429189658
      ],
      [
        "F 2",
        745.6096287568975
      ],
      [
        "F 3",
        1242.6827145948291
      ],
      [
        "F 4",
        1739.7558004327607
      ],
      [
        "F 5",
        2236.8288862706922
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 381.1937985245079Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 380.3671609054765 mm",
    "w_kg: 150000 kg",
    "v_cm3: 18750000 cm³",
    "volume: 18.75 m³",
    "hr: 13 bpm",
    "buoyant force: 183874687.5 N",
    "body density: 8 g/cm³",
    [
      [
        "F 1",
        223.65889788561697
      ],
      [
        "F 2",
        670.9766936568509
      ],
      [
        "F 3",
        1118.2944894280847
      ],
      [
        "F 4",
        1565.6122851993186
      ],
      [
        "F 5",
        2012.9300809705526
      ]
    ]
  ]
]
