crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_800x1280.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 120.03336355514709Hz",
    "cents: 0 cents",
    "l_mm: 283.2495862639523 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 40 cm³",
    "volume: 0.00004 m³",
    "hr: 641 bpm",
    "buoyant force: 392.26599999999996 N",
    "body density: 0.5 g/cm³",
    [
      [
        "F 1",
        300.34465759368607
      ],
      [
        "F 2",
        901.0339727810583
      ],
      [
        "F 3",
        1501.7232879684304
      ],
      [
        "F 4",
        2102.4126031558026
      ],
      [
        "F 5",
        2703.101918343175
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 151.23256143281392Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 332.62640210549483 mm",
    "w_kg: 0.4742493867923583 kg",
    "v_cm3: 710.9094042397494 cm³",
    "volume: 0.0007109094042397494 m³",
    "hr: 291 bpm",
    "buoyant force: 6971.639709087738 N",
    "body density: 0.6671024239713403 g/cm³",
    [
      [
        "F 1",
        255.75991401012917
      ],
      [
        "F 2",
        767.2797420303875
      ],
      [
        "F 3",
        1278.7995700506458
      ],
      [
        "F 4",
        1790.3193980709043
      ],
      [
        "F 5",
        2301.8392260911623
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 190.5410875787218Hz",
    "cents: 799.9999999999997 cents",
    "l_mm: 382.00321794703734 mm",
    "w_kg: 11.245624043646394 kg",
    "v_cm3: 8475.810020408324 cm³",
    "volume: 0.008475810020408325 m³",
    "hr: 132 bpm",
    "buoyant force: 83119.30233663728 N",
    "body density: 1.3267904797970724 g/cm³",
    [
      [
        "F 1",
        222.7010035601188
      ],
      [
        "F 2",
        668.1030106803564
      ],
      [
        "F 3",
        1113.505017800594
      ],
      [
        "F 4",
        1558.9070249208316
      ],
      [
        "F 5",
        2004.3090320410693
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 240.0738816628857Hz",
    "cents: 0 cents",
    "l_mm: 453.88086126067515 mm",
    "w_kg: 266.77043340204443 kg",
    "v_cm3: 88487.11783229285 cm³",
    "volume: 0.08848711783229285 m³",
    "hr: 60 bpm",
    "buoyant force: 867762.1940900546 N",
    "body density: 3.0147940167702934 g/cm³",
    [
      [
        "F 1",
        187.4335475695256
      ],
      [
        "F 2",
        562.3006427085768
      ],
      [
        "F 3",
        937.1677378476279
      ],
      [
        "F 4",
        1312.0348329866792
      ],
      [
        "F 5",
        1686.9019281257304
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 302.47413703704046Hz",
    "cents: 399.9999999999997 cents",
    "l_mm: 503.25767710221766 mm",
    "w_kg: 6325.785722762562 kg",
    "v_cm3: 1054986.7472945503 cm³",
    "volume: 1.0549867472945502 m³",
    "hr: 28 bpm",
    "buoyant force: 10345885.7853561 N",
    "body density: 5.996080746023262 g/cm³",
    [
      [
        "F 1",
        169.04362093361718
      ],
      [
        "F 2",
        507.13086280085156
      ],
      [
        "F 3",
        845.2181046680859
      ],
      [
        "F 4",
        1183.3053465353203
      ],
      [
        "F 5",
        1521.3925884025546
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 381.0935323017538Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 552.6344929437602 mm",
    "w_kg: 150000 kg",
    "v_cm3: 18750000 cm³",
    "volume: 18.75 m³",
    "hr: 13 bpm",
    "buoyant force: 183874687.5 N",
    "body density: 8 g/cm³",
    [
      [
        "F 1",
        153.9399025689436
      ],
      [
        "F 2",
        461.81970770683085
      ],
      [
        "F 3",
        769.699512844718
      ],
      [
        "F 4",
        1077.5793179826053
      ],
      [
        "F 5",
        1385.4591231204924
      ]
    ]
  ]
]
