crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_810x1080.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 159.40769595107636Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 178.55624999999998 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 40 cm³",
    "hr: 641 bpm",
    "buoyant force: 392.26599999999996 N",
    "body density: 0.5 g/cm³",
    [
      [
        "F 1",
        476.44649795232607
      ],
      [
        "F 2",
        1429.3394938569782
      ],
      [
        "F 3",
        2382.23248976163
      ],
      [
        "F 4",
        3335.1254856662827
      ],
      [
        "F 5",
        4288.0184815709345
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 191.57923156025814Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 220.03620608456902 mm",
    "w_kg: 0.2802286418843013 kg",
    "v_cm3: 456.30493201947957 cm³",
    "hr: 332 bpm",
    "buoyant force: 4474.822761588829 N",
    "body density: 0.6141258229317985 g/cm³",
    [
      [
        "F 1",
        386.6295529895799
      ],
      [
        "F 2",
        1159.8886589687397
      ],
      [
        "F 3",
        1933.1477649478995
      ],
      [
        "F 4",
        2706.4068709270596
      ],
      [
        "F 5",
        3479.665976906219
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 240.01984823368605Hz",
    "cents: 1200 cents",
    "l_mm: 261.51616216913806 mm",
    "w_kg: 7.133932832647218 kg",
    "v_cm3: 6021.73305330891 cm³",
    "hr: 148 bpm",
    "buoyant force: 59053.028447231816 N",
    "body density: 1.184697622676442 g/cm³",
    [
      [
        "F 1",
        325.304942128122
      ],
      [
        "F 2",
        975.9148263843659
      ],
      [
        "F 3",
        1626.5247106406098
      ],
      [
        "F 4",
        2277.1345948968537
      ],
      [
        "F 5",
        2927.7444791530975
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 318.8153919021527Hz",
    "cents: 491.4810826274373 cents",
    "l_mm: 322.1961182537071 mm",
    "w_kg: 420.5254058842572 kg",
    "v_cm3: 124548.86215653137 cm³",
    "hr: 54 bpm",
    "buoyant force: 1221407.0990673483 N",
    "body density: 3.3763889818258352 g/cm³",
    [
      [
        "F 1",
        264.03949389921365
      ],
      [
        "F 2",
        792.118481697641
      ],
      [
        "F 3",
        1320.1974694960682
      ],
      [
        "F 4",
        1848.2764572944955
      ],
      [
        "F 5",
        2376.3554450929228
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 383.1584631205163Hz",
    "cents: 809.7449505626737 cents",
    "l_mm: 363.6760743382761 mm",
    "w_kg: 5892.163168439491 kg",
    "v_cm3: 994571.2430335315 cm³",
    "hr: 28 bpm",
    "buoyant force: 9753412.08049478 N",
    "body density: 5.9243248884492825 g/cm³",
    [
      [
        "F 1",
        233.92382948147738
      ],
      [
        "F 2",
        701.7714884444322
      ],
      [
        "F 3",
        1169.619147407387
      ],
      [
        "F 4",
        1637.4668063703418
      ],
      [
        "F 5",
        2105.3144653332965
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 480.0396964673721Hz",
    "cents: 1200 cents",
    "l_mm: 405.15603042284516 mm",
    "w_kg: 150000 kg",
    "v_cm3: 18750000 cm³",
    "hr: 13 bpm",
    "buoyant force: 183874687.5 N",
    "body density: 8 g/cm³",
    [
      [
        "F 1",
        209.97466065410217
      ],
      [
        "F 2",
        629.9239819623066
      ],
      [
        "F 3",
        1049.8733032705109
      ],
      [
        "F 4",
        1469.8226245787152
      ],
      [
        "F 5",
        1889.7719458869194
      ]
    ]
  ]
]
