crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__config_820x1180.snap
---
source: crates/common/src/instrument/config/node.rs
expression: data
---
[
  [
    "key: NodeKey(0, 0)",
    "freq: 120.06077577960441Hz",
    "cents: 0 cents",
    "l_mm: 225.80009602857933 mm",
    "w_kg: 150000 kg",
    "v_cm3: 18750000 cm³",
    "hr: 13 bpm",
    "buoyant force: 183874687.5 N",
    "body density: 8 g/cm³",
    [
      [
        "F 1",
        376.76024721102175
      ],
      [
        "F 2",
        1130.2807416330654
      ],
      [
        "F 3",
        1883.8012360551088
      ],
      [
        "F 4",
        2637.3217304771524
      ],
      [
        "F 5",
        3390.842224899196
      ]
    ]
  ],
  [
    "key: NodeKey(0, 1)",
    "freq: 151.26709867143217Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 269.7434245698146 mm",
    "w_kg: 6325.269095141265 kg",
    "v_cm3: 1376616.6434436978 cm³",
    "hr: 28 bpm",
    "buoyant force: 13499997.606427139 N",
    "body density: 4.594793419988142 g/cm³",
    [
      [
        "F 1",
        315.3830353257848
      ],
      [
        "F 2",
        946.1491059773545
      ],
      [
        "F 3",
        1576.915176628924
      ],
      [
        "F 4",
        2207.6812472804936
      ],
      [
        "F 5",
        2838.447317932063
      ]
    ]
  ],
  [
    "key: NodeKey(0, 2)",
    "freq: 190.58460177266215Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 313.6867531110498 mm",
    "w_kg: 266.7268608396613 kg",
    "v_cm3: 101070.58042699698 cm³",
    "hr: 60 bpm",
    "buoyant force: 991163.8075444099 N",
    "body density: 2.6390158215457906 g/cm³",
    [
      [
        "F 1",
        271.20208028001446
      ],
      [
        "F 2",
        813.6062408400434
      ],
      [
        "F 3",
        1356.0104014000722
      ],
      [
        "F 4",
        1898.414561960101
      ],
      [
        "F 5",
        2440.81872252013
      ]
    ]
  ],
  [
    "key: NodeKey(1, 0)",
    "freq: 240.12155155920883Hz",
    "cents: 0 cents",
    "l_mm: 377.6548895951264 mm",
    "w_kg: 11.247461131420893 kg",
    "v_cm3: 7420.556969510263 cm³",
    "hr: 132 bpm",
    "buoyant force: 72770.80500504782 N",
    "body density: 1.5157165665103969 g/cm³",
    [
      [
        "F 1",
        225.2651887844056
      ],
      [
        "F 2",
        675.7955663532168
      ],
      [
        "F 3",
        1126.325943922028
      ],
      [
        "F 4",
        1576.8563214908393
      ],
      [
        "F 5",
        2027.3866990596505
      ]
    ]
  ],
  [
    "key: NodeKey(1, 1)",
    "freq: 302.53419734286433Hz",
    "cents: 400.00000000000006 cents",
    "l_mm: 421.59821813636165 mm",
    "w_kg: 0.4742881219558612 kg",
    "v_cm3: 544.813985485331 cm³",
    "hr: 291 bpm",
    "buoyant force: 5342.800070759721 N",
    "body density: 0.8705505632961239 g/cm³",
    [
      [
        "F 1",
        201.78572000625527
      ],
      [
        "F 2",
        605.3571600187659
      ],
      [
        "F 3",
        1008.9286000312762
      ],
      [
        "F 4",
        1412.5000400437868
      ],
      [
        "F 5",
        1816.0714800562973
      ]
    ]
  ],
  [
    "key: NodeKey(1, 2)",
    "freq: 381.1692035453243Hz",
    "cents: 799.9999999999998 cents",
    "l_mm: 465.5415466775969 mm",
    "w_kg: 0.02 kg",
    "v_cm3: 40 cm³",
    "hr: 641 bpm",
    "buoyant force: 392.26599999999996 N",
    "body density: 0.5 g/cm³",
    [
      [
        "F 1",
        182.73879228853352
      ],
      [
        "F 2",
        548.2163768656005
      ],
      [
        "F 3",
        913.6939614426675
      ],
      [
        "F 4",
        1279.1715460197345
      ],
      [
        "F 5",
        1644.6491305968016
      ]
    ]
  ]
]
