crates/common/src/instrument/config/snapshots/common__instrument__config__node__tests__formants.snap
---
source: crates/common/src/instrument/config/node.rs
expression: formants
---
[
  [
    1,
    500.4264705882353
  ],
  [
    2,
    1501.2794117647059
  ],
  [
    3,
    2502.1323529411766
  ],
  [
    4,
    3502.9852941176473
  ],
  [
    5,
    4503.838235294117
  ]
]
